--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.31.1",
-    "@astrojs/svelte": "^7.0.3",
-    "astro": "^5.1.7",
+    "@astrojs/svelte": "^7.0.4",
+    "astro": "^5.1.10",
     "sharp": "^0.33.5",
     "starlight-links-validator": "^0.14.1",
+    "starlight-package-managers": "^0.9.0",
     "starlight-showcases": "^0.3.0",
-    "svelte": "^5.19.0",
+    "svelte": "^5.19.5",
     "typescript": "^5.7.3"
   }
 }
