--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "starlight-links-validator": "^0.14.3",
     "starlight-package-managers": "^0.10.0",
     "starlight-showcases": "^0.3.0",
+    "starlight-theme-nova": "^0.1.1",
     "svelte": "^5.25.3",
     "typescript": "^5.8.2"
   }
