--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.36.1",
-    "@astrojs/svelte": "^7.2.0",
-    "astro": "^5.15.1",
-    "sharp": "^0.34.4",
-    "starlight-links-validator": "^0.19.0",
+    "@astrojs/starlight": "^0.36.2",
+    "@astrojs/svelte": "^7.2.2",
+    "astro": "^5.15.8",
+    "sharp": "^0.34.5",
+    "starlight-links-validator": "^0.19.1",
     "starlight-package-managers": "^0.11.1",
     "starlight-showcases": "^0.3.1",
     "starlight-sidebar-topics": "^0.6.2",
-    "svelte": "^5.41.4",
+    "starlight-ui-tweaks": "^0.1.0",
+    "svelte": "^5.43.8",
     "typescript": "^5.9.3"
   }
 }
